K8s/gitlab/k8s/mypod.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  namespace: default
spec:
  containers:
  - name: myapp-container
    image: nginx:1.14.2
    ports:
    - containerPort: 80
