K8s/gitlab/k8s/my-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: my-dep
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
